--- a/src/app/pages/blog/blog.component.html
+++ b/src/app/pages/blog/blog.component.html
@@ -1,5 +1,6 @@
-<div class="body-inicio vh-100">
-    <div class="ctn-inicio  w-75 d-inline-block">
-        <iframe src="https://epic-code.ghost.io" width="100%" height="100%" marginwidth="50" allow="fullscreen"></iframe>
-    </div>
+
+<div class="ctn-inicio-blog">
+    <h3>Blog</h3>
+    <p>Enterate sobre las novedades del mundo de la tecnologia y aprende tips sobre programacion</p>
+    <iframe src="https://epic-code.ghost.io" width="100%" height="100%" marginwidth="50" allow="fullscreen"></iframe>
 </div>
