--- a/src/app/pages/container/container.component.html
+++ b/src/app/pages/container/container.component.html
@@ -1,5 +1,5 @@
 <div class="body-inicio vh-100">
-    
+    <app-menu style="position: fixed; z-index: 5;"></app-menu>
     <div style="position: absolute; z-index: 2;">
         <div class="ctn-boton-menu">
             <button (click)="toggleMenu()">
