--- a/src/app/pages/inicio/inicio.component.html
+++ b/src/app/pages/inicio/inicio.component.html
@@ -1,37 +1,48 @@
-<app-container>
-    <div class="ctn-inicio  w-75 d-inline-block">
-        <app-menu></app-menu>
-        <div class="container ctn-txt-img">
-            <div class="row align-items-center ctn-info-inicio">
-                <div class="col" >
-                    <div class="ctn-texto">
-                        <h2>Jorge Alexander Córdoba</h2>
-    
-                        <div class="content">
-                            <div class="content__container">
-                              <ul class="content__container__list">
-                                <li class="content__container__list__item">Frontend Developer...</li>
-                                <li class="content__container__list__item">Angular Developer...</li>
-                                <li class="content__container__list__item">Mobile Developer...</li>
-                                <li class="content__container__list__item">Forever Student <ngx-emoji size:16 emoji=":brain::skin-tone-3:" ></ngx-emoji></li>
-                              </ul>
-                            </div>
-                        </div>
-    
-                        <p class="txt-description">Hola! Soy un desarrollador de software apasionado a la tecnología con una amplia experiencia en la construccion de aplicaciones web modernas.</p>
-                        
+<div class="ctn-inicio">
+    <div class="container ctn-txt-img">
+        <div class="row align-items-center ctn-info-inicio">
+            <div class="col" >
+                <div class="ctn-texto">
+                    <div class="ctn-redes">
+                        <a href="">
+                            <img src="../../../assets/img/linkedin.png" alt="">
+                        </a>
+                        <a href="">
+                            <img src="../../../assets/img/twitter.png" alt="">
+                        </a>
+                        <a href="">
+                            <img src="../../../assets/img/instagram.png" alt="">
+                        </a>
+                        <a href="">
+                            <img src="../../../assets/img/blog.png" alt="">
+                        </a>
                     </div>
-                </div>
-                <div class="col align-self-center ctn-img-inicio" >
-                    <img class="img-avatar" src="../../../assets/img/avatar2.png" alt="Me">
+                    <h2>Jorge Alexander Córdoba</h2>
+
+                    <div class="content">
+                        <div class="content__container">
+                          <ul class="content__container__list">
+                            <li class="content__container__list__item">Frontend Developer...</li>
+                            <li class="content__container__list__item">Angular Developer...</li>
+                            <li class="content__container__list__item">Mobile Developer...</li>
+                            <li class="content__container__list__item">Forever Student <ngx-emoji size:16 emoji=":brain::skin-tone-3:" ></ngx-emoji></li>
+                          </ul>
+                        </div>
+                    </div>
+
+                    <p class="txt-description">Hola! Soy un desarrollador de software apasionado a la tecnología con una amplia experiencia en la construccion de aplicaciones web modernas.</p>
+                    
                 </div>
             </div>
-        </div>
-        <div class="ctn-animation-scroll">
-          <div class="chevron"></div>
-          <div class="chevron"></div>
-          <div class="chevron"></div>
-          <span class="text-scroll">Scroll down</span>
+            <div class="col align-self-center ctn-img-inicio" >
+                <img class="img-avatar" src="../../../assets/img/avatar2.png" alt="Me">
+            </div>
         </div>
     </div>
-</app-container>
+    <div class="ctn-animation-scroll">
+      <div class="chevron"></div>
+      <div class="chevron"></div>
+      <div class="chevron"></div>
+      <span class="text-scroll">Scroll down</span>
+    </div>
+</div>
