--- a/src/app/pages/my-services/my-services.component.html
+++ b/src/app/pages/my-services/my-services.component.html
@@ -1,6 +1,4 @@
-<app-container>
-  <div class="ctn-inicio  w-75 d-inline-block">
-      <app-menu></app-menu>
+  <div class="ctn-inicio-services">
       <div class="ctn-skills-services">
         <app-skills></app-skills>
         <div class="ctn-swiper">
@@ -44,5 +42,3 @@
       </div>
 
   </div>
-
-</app-container>
