--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,12 @@
-<div fullpage id="fullpage" [options]="config" (ref)="getRef($event)" #fullpageRef>
-	<div class="section">
+<app-container fullscreen>
+	<div class="pages-container" fullscreen>
 		<app-inicio></app-inicio>
-	</div>
-	<div class="section">
 		<app-about-me></app-about-me>
-	</div>
-	<div class="section">
 		<app-my-services></app-my-services>
-	</div>
-	<div class="section">
 		<app-timeline></app-timeline>
-	</div>
-	<div class="section">
 		<app-projects></app-projects>
-	</div>
-	<div class="section">
 		<app-blog></app-blog>
-	</div>
-	<div class="section" >
 		<app-contact></app-contact>
 	</div>
-</div>
+</app-container>
+	
