--- a/src/app/pages/about-me/about-me.component.scss
+++ b/src/app/pages/about-me/about-me.component.scss
@@ -1,25 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Hubballi&display=swap');
 
-.body-inicio {
-    text-align: center;
+.ctn-inicio-about {
+    width: 90%;
     display: flex;
-    align-items: center;
-    background-image: url('../../../assets/img/fondo-grandient.jpg');
-    background-repeat: no-repeat; 
-    background-size: cover; 
-    background-image: tr;
-    transform: rotate(180deg);
-}
-.ctn-inicio {
-    background-color: white;
+    flex-direction: column;
     margin: 0 auto;
-    height: 90vh;
-    border-radius: 20px;
-    box-shadow:  0px 0px 28px -9px rgba(51, 51, 51, 0.75);
-    background-color: rgb(143 143 143 / 52%);
-    border: none;
-    transform: rotate(180deg);
-
+    justify-content: center;
+    height: 80vh;
 }
 .ctn-boton-menu {
     display: none;
@@ -60,6 +47,13 @@
 .menu-oculto {
     display: none;
 }
+@media (max-width: 1400px) {
+    .ctn-inicio-about {
+        height: 115vh;
+        justify-content: start;
+    }
+}
+
 @media (max-width: 1000px) {
     app-menu {
       display: none;
@@ -176,8 +170,9 @@
     }
 }
 @media (max-width: 500px) {
-    .body-inicio{
-        display: block;
+    .ctn-inicio-about {
+        width: 100%;
+        height: 100vh;
     }
     app-menu {
         display: none;
@@ -185,15 +180,11 @@
     .icon-logo {
         width: 45px;
     }
-    .ctn-inicio {
-        width: 90% !important;
-        margin-top: 28px;
-    }
     .img-profile {
         max-width: 55%;
     }
     .txt-description {
-        font-size: 17px;
+        font-size: 20px;
         padding: 0 13px;
     }
     .line-bottom {
