--- a/src/app/pages/blog/blog.component.scss
+++ b/src/app/pages/blog/blog.component.scss
@@ -1,18 +1,11 @@
-.body-inicio {
-    text-align: center;
+.ctn-inicio-blog {
+    width: 90%;
+    height: 100vh;
     display: flex;
-    align-items: center;
-    background-image: url('../../../assets/img/fondo-grandient.jpg');
-    background-repeat: no-repeat; 
-    background-size: cover; 
-}
-.ctn-inicio {
-    background-color: white;
+    flex-direction: column;
     margin: 0 auto;
-    height: 90vh;
-    border-radius: 20px;
-    box-shadow:  0px 0px 28px -9px rgba(51, 51, 51, 0.75);
-    border: none;
-    background-color: rgb(143 143 143 / 52%);
-    backdrop-filter: blur(10px);
+}
+p {
+    font-size: 23px;
+    margin-bottom: 55px;
 }
