--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -1,38 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Hubballi&display=swap');
-.body-inicio {
-    text-align: center;
+.ctn-inicio-contact {
+    width: 90%;
+    height: 70vh;
     display: flex;
-    align-items: center;
-    background-image: url('../../../assets/img/fondo-grandient.jpg');
-    background-repeat: no-repeat; 
-    background-size: cover; 
-}
-.ctn-inicio {
-    background-color: white;
+    flex-direction: column;
     margin: 0 auto;
-    height: 90vh;
-    border-radius: 20px;
-    box-shadow:  0px 0px 28px -9px rgba(51, 51, 51, 0.75);
-    border: none;
-    background-color: rgb(143 143 143 / 52%);
-    backdrop-filter: blur(10px);
+    justify-content: center;
 }
-
+p {
+    font-size: 23px;
+}
 .ctn-form {
     display: flex;
     width: 80%;
     text-align: center;
     margin: 0 auto;
-    padding-top: 50px;
+
     padding-bottom: 50px;
-    margin-top: 80px;
     .ctn-img img {
         max-width: 100%;
         width: 450px;
         box-shadow: 0px 0px 24px 4px rgba(0,0,0,0.75);
     }
     .ctn-img {
-        margin-top: 40px;
+        margin-top: 80px;
     }
     form {
         width: 400px;
@@ -45,6 +36,16 @@ form {
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+.oculto {
+    display: none;
+}
+.invalid-feedback-name,
+.invalid-feedback-email,
+.invalid-feedback-mesagge {
+    color: red;
+    font-size: 13px;
+    display: block;
 }
 .ctn-button{
     position: relative;
@@ -121,14 +122,25 @@ button {
         }
         
     .ctn-img{
-        margin-top: 77px !important;
+        margin-top: 77px;
     }
 }
-@media (max-width: 1300px) {
-    .ctn-inicio {
-        width: 80% !important;
+@media (max-width: 1400px) {
+    .ctn-inicio-contact{
+        height: 100vh;
+    }
+    label {
+        font-size: 22px;
+    }
+    .ctn-form {
+        padding-bottom: 100px;
+        margin-top: 60px;
+    }
+    .ctn-img{
+        margin-top: 15px !important;
     }
 }
+
 @media (max-width: 1177px) {
     .ctn-form {
         flex-direction: column;
@@ -146,5 +158,16 @@ button {
 @media (max-width: 800px) {
     form {
         width: 100% !important;
+    }
+    .ctn-form {
+        margin-top: 10px;
+        padding-bottom: 40px;
+    }
+    .ctn-img{ 
+        margin-top: 80px;
+    }
+    .ctn-button {
+        width: 100%;
+        margin-bottom: 15px;
     }
 }
