--- a/src/app/pages/my-services/my-services.component.scss
+++ b/src/app/pages/my-services/my-services.component.scss
@@ -2,15 +2,13 @@
 @import "~swiper/css";
 @import "~swiper/css/effect-cards";
 
-
-.ctn-inicio {
-    background-color: white;
-    margin: 0 auto;
-    height: 90vh;
-    border-radius: 20px;
-    box-shadow:  0px 0px 28px -9px rgba(51, 51, 51, 0.75);
-    background-color: rgb(143 143 143 / 52%);
-    border: none;
+.ctn-inicio-services {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  height: 63vh;
+  justify-content: center;
 }
 .card {
     height: 100%;
@@ -33,6 +31,7 @@
     color: black;
     .card-text {
         font-size: 17px;
+        font-weight: 300;
     }
 }
 .title-my-services {
@@ -116,10 +115,16 @@ h3{
     background-color: rgb(54, 94, 77);
   }
   
+
+@media (max-width: 1400px) {
+  .ctn-inicio-services {
+    height: 80vh;
+  }
+}
 @media (max-width: 1600px) and (min-width: 1000px){
   .swiper {
-    width: 265px;
-    height: 340px
+    width: 300px;
+    height: 365px;
   }
   app-skills {
     width: 50%;
@@ -201,19 +206,23 @@ h3{
     }
   }
 @media (max-width: 500px) {
-    app-menu {
-        display: none;
+  .ctn-inicio-services {
+    height: 90vh;
+    justify-content: start;
+  }
+  app-menu {
+      display: none;
+  }
+  .ctn-inicio {
+      width: 90% !important;
     }
-    .ctn-inicio {
-        width: 90% !important;
-      }
-    .ctn-logo {
-        margin-top: 25px;
-    }
-    .sub-title {
-        margin: 0;
-    }
-    .title-my-services {
-        font-size: 25px;
-    }
+  .ctn-logo {
+      margin-top: 25px;
+  }
+  .sub-title {
+      margin: 0;
+  }
+  .title-my-services {
+      font-size: 25px;
+  }
 }
