--- a/src/app/pages/timeline/timeline.component.html
+++ b/src/app/pages/timeline/timeline.component.html
@@ -1,91 +1,61 @@
-<div class="body-inicio vh-100">
-    <div class="ctn-inicio  w-75 d-inline-block">
-        <app-menu></app-menu>
-        <div class="ctn-time-line">
-            <h3>Mi experiencia</h3>
-            <p class="txt-description">Conoce un poco mas a detalle mi trayectoria en el mundo de la tecnología y el desarrollo de software</p>
-            <section class="horizontal-timeline-container">
-                <div class="timeline-block">
-                    <div class="timeline-step-counter time-line-step-one">2018</div>
-                    <div class="timeline-content">
-                    <p>Ponente de idea de emprendimiento en la competencia Hult Prize.</p>
-                    </div>
-                </div>
-                <div class="timeline-block">
-                    <div class="timeline-step-counter time-line-step-five">2019</div>
-                    <div class="timeline-content">
-                    <p>Lider en el semillero de desarrollo de software de la universidad.</p>
-                    </div>
-                </div>
-                <div class="timeline-block">
-                    <div class="timeline-step-counter time-line-step-two">2019</div>
-                    <div class="timeline-content">
-                    <p>Frontend Developer angular en Sitis S.A.S desarrollando software hospitalario.</p>
-                    </div>
-                </div>
-                <div class="timeline-block">
-                    <div class="timeline-step-counter time-line-step-three">2020</div>
-                    <div class="timeline-content">
-                    <p>Graduacion como Ingenerio de sistemas informaticos.</p>
-                    </div>
-                </div>
-                <div class="timeline-block">
-                    <div class="timeline-step-counter time-line-step-four">2021</div>
-                    <div class="timeline-content">
-                    <p>Frontend Developer angular en Asesoftware en multiples proyectos nacionales e internacionales.</p>
-                    </div>
-                </div>
-            </section>
 
-
-            <div id="content">
-                <ul class="timeline">
-                  <li class="event" data-date="2021">
-                    <h3 class="title-event">Frontend Asesoftware S.A.S</h3>
-                    <p>Frontend Developer angular en Asesoftware en multiples proyectos nacionales e internacionales.</p>
-                  </li>
-                  <li class="event" data-date="2020">
-                    <h3 class="title-event">Graduacion universidad</h3>
-                    <p>Graduacion como Ingenerio de sistemas informaticos.</p>   
-                  </li>
-                  <li class="event" data-date="2019">
-                    <h3 class="title-event">Frontend Sitis S.A.S</h3>
-                    <p>Lider en el semillero de desarrollo de software de la universidad.</p>
-                    <p>Frontend Developer angular en Sitis S.A.S desarrollando software hospitalario.</p>
-                  </li>
-                  <li class="event" data-date="2018">
-                    <h3 class="title-event">Hult Prize</h3>
-                    <p>Ponente de idea de emprendimiento en la competencia Hult Prize.</p> 
-                  </li>
-                </ul>
-              </div>
-
-        </div>
-
-
-    </div>
-    <div style="transform: rotate(180deg);">
-
-        <div class="ctn-boton-menu">
-            <button (click)="toggleMenu()">
-                <img src="../../../assets/img/menu-lateral.png" alt="" srcset="">
-            </button>
-        </div>
-        <div [ngClass]="{'menu': flag, 'menu-oculto': !flag}" id="toggle-menu">
-            <div style="display: flex; justify-content: space-between;">
-    
-                <ul>
-                    <li>Inicio</li>
-                    <li>Sobre mi</li>
-                    <li>Mis servicios</li>
-                    <li>Trabajos</li>
-                    <li>Trayectoria</li>
-                </ul>
-                <button class="ctn-boton-close" (click)="toggleMenu()">
-                    <img src="../../../assets/img/icono-close.png" alt="" srcset="">
-                </button>
+<div class="ctn-inicio">
+    <h3>Mi experiencia</h3>
+    <p class="txt-description">Conoce un poco mas a detalle mi trayectoria en el mundo de la tecnología y el desarrollo de software</p>
+    <section class="horizontal-timeline-container">
+        <div class="timeline-block">
+            <div class="timeline-step-counter time-line-step-one">2018</div>
+            <div class="timeline-content">
+            <p>Ponente de idea de emprendimiento en la competencia Hult Prize.</p>
             </div>
         </div>
+        <div class="timeline-block">
+            <div class="timeline-step-counter time-line-step-five">2019</div>
+            <div class="timeline-content">
+            <p>Lider en el semillero de desarrollo de software de la universidad.</p>
+            </div>
+        </div>
+        <div class="timeline-block">
+            <div class="timeline-step-counter time-line-step-two">2019</div>
+            <div class="timeline-content">
+            <p>Frontend Developer angular en Sitis S.A.S desarrollando software hospitalario.</p>
+            </div>
+        </div>
+        <div class="timeline-block">
+            <div class="timeline-step-counter time-line-step-three">2020</div>
+            <div class="timeline-content">
+            <p>Graduacion como Ingenerio de sistemas informaticos.</p>
+            </div>
+        </div>
+        <div class="timeline-block">
+            <div class="timeline-step-counter time-line-step-four">2021</div>
+            <div class="timeline-content">
+            <p>Frontend Developer angular en Asesoftware en multiples proyectos nacionales e internacionales.</p>
+            </div>
+        </div>
+    </section>
+
+
+    <div id="content">
+        <ul class="timeline">
+            <li class="event" data-date="2021">
+            <h3 class="title-event">Frontend Asesoftware S.A.S</h3>
+            <p>Frontend Developer angular en Asesoftware en multiples proyectos nacionales e internacionales.</p>
+            </li>
+            <li class="event" data-date="2020">
+            <h3 class="title-event">Graduacion universidad</h3>
+            <p>Graduacion como Ingenerio de sistemas informaticos.</p>   
+            </li>
+            <li class="event" data-date="2019">
+            <h3 class="title-event">Frontend Sitis S.A.S</h3>
+            <p>Lider en el semillero de desarrollo de software de la universidad.</p>
+            <p>Frontend Developer angular en Sitis S.A.S desarrollando software hospitalario.</p>
+            </li>
+            <li class="event" data-date="2018">
+            <h3 class="title-event">Hult Prize</h3>
+            <p>Ponente de idea de emprendimiento en la competencia Hult Prize.</p> 
+            </li>
+        </ul>
     </div>
 </div>
   
