--- a/src/app/pages/timeline/timeline.component.scss
+++ b/src/app/pages/timeline/timeline.component.scss
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Hubballi&display=swap');
 
 $background: #252827;
 
@@ -15,48 +14,25 @@ $line: 4px;
 $font-title: 'Oswald', sans-serif;
 $font-text: 'Source Sans Pro', sans-serif;
 
-
-
-.body-inicio {
-    text-align: center;
-    display: flex;
-    align-items: center;
-    background-image: url('../../../assets/img/fondo-grandient.jpg');
-    background-repeat: no-repeat; 
-    background-size: cover; 
-    transform: rotate(180deg);
-
-}
 .ctn-inicio {
-    background-color: white;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    height: 55vh;
     margin: 0 auto;
-    height: 90vh;
-    border-radius: 20px;
-    box-shadow:  0px 0px 28px -9px rgba(51, 51, 51, 0.75);
-    border: none;
-    background-color: rgb(143 143 143 / 52%);
-    backdrop-filter: blur(10px);
-    transform: rotate(180deg);
-
 }
-
 .ctn-time-line {
     width: 90%;
     margin: 0 auto;
-    height: 55vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
 }
 h3 {
-    font-family: 'Hubballi', cursive;
-    font-size: 43px;
+    font-size: 30px;
     font-weight: bold;
 }
   
 .txt-description {
-    font-size: 20px;
-    font-family: 'Hubballi', cursive;
+    font-size: 23px;
 }
 .menu-oculto {
     display: none;
@@ -230,13 +206,19 @@ h3 {
     }
   }
 
-
+@media (max-width: 1400px) {
+    .ctn-inicio {
+        height: 77vh;
+        width: 85%;
+    }
+}
 @media (max-width: 1354px) {
     .timeline-content{
         .timeline-block:nth-child(odd) & {
             top: -58px;
         }
     }
+    
 }
 
 @media (max-width: 1140px) {
@@ -306,6 +288,12 @@ h3 {
     }
 }
 @media (max-width: 788px) {
+    h3 {
+        font-size: 25px;
+    }
+    .ctn-time-line{
+        height: 70vh;
+    }
     .timeline-step-counter{
         width: 95px;
     }
@@ -317,6 +305,9 @@ h3 {
     }
 }
 @media (max-width: 670px) {
+    .ctn-inicio {
+        height: 85vh;
+    }
     .horizontal-timeline-container {
         display: none;
     }
