navegacion interna lista

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <app-container fullscreen>
 	<div class="pages-container" fullscreen>
-		<app-inicio></app-inicio>
-		<app-about-me></app-about-me>
-		<app-my-services></app-my-services>
-		<app-timeline></app-timeline>
-		<app-projects></app-projects>
-		<app-blog></app-blog>
-		<app-contact></app-contact>
+		<app-inicio id="home"></app-inicio>
+		<app-about-me id="about"></app-about-me>
+		<app-my-services id="services"></app-my-services>
+		<app-timeline id="timeline"></app-timeline>
+		<app-projects id="projects"></app-projects>
+		<app-blog id="blog"></app-blog>
+		<app-contact id="contact"></app-contact>
 	</div>
 </app-container>
 	
