--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -1,37 +1,37 @@
 <header class="header">
     <div class="all">
-        <a class="lefter" href="#sobre-mi">
+        <a class="lefter" [routerLink] = "['/']" fragment="about">
           <div>
             <div class="text">Sobre mi</div>
           </div>
         </a>
-        <a class="left" href="#servicios">
+        <a class="left" [routerLink] = "['/']" fragment="services">
           <div>
             <div class="text">Servicios</div>
           </div>
         </a>
-        <a class="left2" href="#trabajos">
+        <a class="left2" [routerLink] = "['/']" fragment="projects">
           <div>
             <div class="text">Trabajos</div>
           </div>
         </a>
-        <a class="center" href="#inicio">
+        <a class="center" [routerLink] = "['/']" fragment="home">
           <div class="center">
             <div class="explainer"><span class="txt-menu"><fa-icon class="faMenu" [icon]="faCoffee"></fa-icon>Menu</span></div>
             <div class="text">Inicio</div>
           </div>
         </a>
-        <a class="right" href="#trayectoria">
+        <a class="right" [routerLink] = "['/']" fragment="timeline">
           <div >
             <div class="text">Trayectoria</div>
           </div>
         </a>
-        <a class="right2" href="#blog">
+        <a class="right2" [routerLink] = "['/']" fragment="blog">
           <div >
             <div class="text">Blog</div>
           </div>
         </a>
-        <a class="righter" href="#contacto">
+        <a class="righter" [routerLink] = "['/']" fragment="contact">
           <div>
             <div class="text">Contacto</div>
           </div>
