responsive pantallas tablets ipad y portatiles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 		<app-my-services id="services"></app-my-services>
 		<app-timeline id="timeline"></app-timeline>
 		<app-projects id="projects"></app-projects>
-		<app-blog id="blog"></app-blog>
+		<!-- <app-blog id="blog"></app-blog> -->
 		<app-contact id="contact"></app-contact>
 	</div>
 </app-container>
