--- a/src/app/pages/about-me/about-me.component.scss
+++ b/src/app/pages/about-me/about-me.component.scss
@@ -142,6 +142,12 @@
         margin-top: 40px;
     }
 }
+@media (max-width: 1370px) {
+    .ctn-inicio-about {
+        height: 96vh;
+    }
+    
+}
 @media (min-width: 992px) and (max-width: 1900px) { 
     .img-profile{
         width: 440px;
@@ -167,6 +173,14 @@
     }
     .title-me {
         margin-top: 15px;
+    }
+}
+@media (min-width: 650px) and (max-width: 850px) {
+    .ctn-inicio-about {
+        height: 70vh;
+    }
+    .img-profile {
+        max-width: 40%
     }
 }
 @media (max-width: 500px) {
