--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,7 +1,7 @@
 
 <div class="ctn-inicio-contact">
     <h3>Contacto</h3>
-    <p>Si tienes una idea la cual quieras materializar, contactame y trabajemos juntos!</p>
+    <p>Si tienes una idea la cual quieres materializar, contáctame y trabajemos juntos!</p>
     <div class="ctn-form">
         <form [formGroup]="formulario" action="https://formspree.io/f/mnqwboge" method="POST" autocomplete="off">
             <div class="mb-3">
