--- a/src/app/pages/inicio/inicio.component.html
+++ b/src/app/pages/inicio/inicio.component.html
@@ -4,16 +4,16 @@
             <div class="col" >
                 <div class="ctn-texto">
                     <div class="ctn-redes">
-                        <a href="">
+                        <a target="_blank" href="https://www.linkedin.com/in/jorge-alexander-astaiza-cordoba-126671173/">
                             <img src="../../../assets/img/linkedin.png" alt="">
                         </a>
-                        <a href="">
+                        <a target="_blank" href="https://twitter.com/AlexCordobaInc">
                             <img src="../../../assets/img/twitter.png" alt="">
                         </a>
-                        <a href="">
+                        <a target="_blank" href="https://www.instagram.com/alex_cordoba___/">
                             <img src="../../../assets/img/instagram.png" alt="">
                         </a>
-                        <a href="">
+                        <a target="_blank" href="">
                             <img src="../../../assets/img/blog.png" alt="">
                         </a>
                     </div>
@@ -30,7 +30,7 @@
                         </div>
                     </div>
 
-                    <p class="txt-description">Hola! Soy un desarrollador de software apasionado a la tecnología con una amplia experiencia en la construccion de aplicaciones web modernas.</p>
+                    <p class="txt-description">Hola! Soy un desarrollador de software apasionado a la tecnología con una amplia experiencia en la construcción de aplicaciones web modernas.</p>
                     
                 </div>
             </div>
