--- a/src/app/pages/menu/menu.component.scss
+++ b/src/app/pages/menu/menu.component.scss
@@ -73,7 +73,7 @@
   }
   .left2 {
     transform: translateX(-18px) translateZ(-25px) rotateY(-5deg);
-    background-image: url('../../../assets/img/serivices.png');
+    background-image: url('../../../assets/img/work.png');
   }
   .center {
     opacity: 1;
