--- a/src/app/pages/my-services/my-services.component.html
+++ b/src/app/pages/my-services/my-services.component.html
@@ -9,7 +9,7 @@
                 <img class="card-img-top" src="../../../assets/img/landing-page-icon.png" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">Landing pages</h5>
-                  <p class="card-text">Construccion de landing pages a medida para tu negocio, tienda o pagina personal.</p>
+                  <p class="card-text">Construcción de landing pages a medida para tu negocio, tienda o pagina personal.</p>
                 </div>
               </div>
             </ng-template>
@@ -27,7 +27,7 @@
                 <img class="card-img-top" src="../../../assets/img/mobile-application-icon.png"  alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">Aplicaciones moviles</h5>
-                  <p class="card-text">Implementacion de aplicaciones moviles para Android y IOS</p>
+                  <p class="card-text">Implementación de aplicaciones móviles para Android y IOS</p>
                 </div>
               </div>
             </ng-template>
