--- a/src/app/pages/skills/skills.component.html
+++ b/src/app/pages/skills/skills.component.html
@@ -48,6 +48,10 @@
             <img class="logo" src="../../../assets/img/icono-flutter.png" alt="Flutter" >
             <p>Flutter</p>
         </div>
+        <div class="ctn-img-logo">
+            <img class="logo" src="../../../assets/img/icon-react.png" alt="React" >
+            <p>React</p>
+        </div>
     </div>
     
     
