--- a/src/app/pages/timeline/timeline.component.html
+++ b/src/app/pages/timeline/timeline.component.html
@@ -12,7 +12,7 @@
         <div class="timeline-block">
             <div class="timeline-step-counter time-line-step-five">2019</div>
             <div class="timeline-content">
-            <p>Lider en el semillero de desarrollo de software de la universidad.</p>
+            <p>Líder en el semillero de desarrollo de software de la universidad.</p>
             </div>
         </div>
         <div class="timeline-block">
@@ -24,13 +24,13 @@
         <div class="timeline-block">
             <div class="timeline-step-counter time-line-step-three">2020</div>
             <div class="timeline-content">
-            <p>Graduacion como Ingenerio de sistemas informaticos.</p>
+            <p>Graduación como Ingeniero de sistemas informáticos.</p>
             </div>
         </div>
         <div class="timeline-block">
             <div class="timeline-step-counter time-line-step-four">2021</div>
             <div class="timeline-content">
-            <p>Frontend Developer angular en Asesoftware en multiples proyectos nacionales e internacionales.</p>
+            <p>Frontend Developer angular en Asesoftware en múltiples proyectos nacionales e internacionales.</p>
             </div>
         </div>
     </section>
