--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -110,7 +110,13 @@ button {
    button:active {
     background: linear-gradient(32deg,#03a9f4,#f441a5,#ffeb3b,#03a9f4);
    }
-
+@media (min-width: 1900px){
+    .ctn-form{
+        form {
+            width: 45%;
+        }
+    }
+}
 @media (min-width: 1395px) and (max-width: 1900px) {
     .ctn-form {
         form {
@@ -148,7 +154,8 @@ button {
             margin-top: 15px;
         }
         .ctn-img img {
-            width: 410px;
+            width: 385px;
+            margin-top: 20px;
         }
     }
 }
@@ -194,6 +201,40 @@ button {
         height: 85vh;
     }
 }
-@media (max-width: 800px) {
-   
+
+@media (max-width: 620px) {
+    .ctn-inicio-contact {
+        height: 95vh;
+        margin-top: 75px;
+    }
+    .ctn-form {
+        margin-top: 10px;
+        form { 
+            width: 100%;
+            margin-bottom: 50px;
+        }
+    }
+    .ctn-button {
+        width: 65%; 
+    }
+}
+@media (max-width: 500px) {
+    .ctn-inicio-contact {
+        height: 820px;
+        margin-top: 50px;
+    }
+    p {
+        text-align: justify;
+    }
+    .ctn-form {
+        width: 90%;
+        padding-bottom: 60px;
+        margin-top: 50px;
+        .ctn-img {
+            margin-top: 40px;
+        }
+    }
+    .ctn-button {
+        width: 60%;
+    }
 }
