--- a/src/app/pages/timeline/timeline.component.scss
+++ b/src/app/pages/timeline/timeline.component.scss
@@ -335,7 +335,24 @@ h3 {
         margin-top: 15px;
     }
 }
-@media (max-width: 414px) {
+@media (max-width: 620px) {
+    .ctn-inicio {
+        height: 75vh;
+    }
+    #content {
+        margin-top: 20px;
+    }
+    li{
+        p{
+            font-size: 18px;
+        }
+    }
+}
+@media (max-width: 500px) {
+    .ctn-inicio {
+        margin-top: 0;
+        height: 735px;
+    }
     .timeline{
         margin-left: 50px;
     }
