--- a/src/app/pages/timeline/timeline.component.html
+++ b/src/app/pages/timeline/timeline.component.html
@@ -1,6 +1,6 @@
 
 <div class="ctn-inicio">
-    <h3>Mi experiencia</h3>
+    <h3>Trayectoria</h3>
     <p class="txt-description">Conoce un poco mas a detalle mi trayectoria en el mundo de la tecnología y el desarrollo de software</p>
     <section class="horizontal-timeline-container">
         <div class="timeline-block">
