--- a/src/app/pages/projects/projects.component.scss
+++ b/src/app/pages/projects/projects.component.scss
@@ -1,181 +1,397 @@
-@import url('https://fonts.googleapis.com/css2?family=Hubballi&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Hubballi&display=swap");
 
-.ctn-inicio-projects {
-  width: 90%;
-  margin: 0 auto;
-  display: flex;
-  justify-content: start;
-  flex-direction: column;
-}
-h3{
-    margin-bottom: 40px;
-    font-size: 23px;
-    font-family: 'Hubballi', cursive;
-    font-weight: bold;
-}
-.ctn-carousel {
-    width: 70%;
-}
+// .ctn-inicio-projects {
+//   width: 90%;
+//   margin: 0 auto;
+//   display: flex;
+//   justify-content: start;
+//   flex-direction: column;
+// }
 
-li {
-    text-align: justify;
+h3 {
+  font-size: 30px;
+  font-family: "Hubballi", cursive;
+  font-weight: bold;
 }
-a {
-    text-decoration: none;
+.txt-descripcion {
+  font-size: 23px;
 }
-button {
+.ctn-swiper {
+  overflow: hidden;
+}
+.swiper {
+  width: 95%;
+  position: relative;
+  max-width: 900px;
+  margin: auto;
+  background: #fff;
+  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+  padding: 25px;
+  border-radius: 25px;
+  height: 365px;
+  transition: all 0.3s;
+  overflow: visible;
+  
+  @media screen and (max-width: 992px) {
+    max-width: 680px;
+    height: 400px;
+  }
+
+  @media screen and (max-width: 768px) {
+    min-height: 500px;
+    height: auto;
+    margin: 180px auto;
+  }
+
+  @media screen and (max-height: 500px) and (min-width: 992px) {
+    height: 350px;
+  }
+}
+::ng-deep .swiper__img {
+  width: 300px;
+  flex-shrink: 0;
+  height: 300px;
+  background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
+  box-shadow: 4px 13px 30px 1px rgba(252, 56, 56, 0.2);
+  border-radius: 20px;
+  transform: translateX(-80px);
+  overflow: hidden;
+
+  &:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     border-radius: 20px;
+    opacity: 0.8;
+  }
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+    opacity: 0;
+    border-radius: 20px;
+    transition: all 0.3s;
+  }
+
+  @media screen and (max-width: 992px) {
+    // width: 45%;
+  }
+  @media screen and (max-width: 768px) {
+    transform: translateY(-50%);
+    width: 90%;
+  }
+  @media screen and (max-width: 576px) {
+    width: 95%;
+  }
+  @media screen and (max-height: 500px) and (min-width: 992px) {
+    height: 270px;
+  }
+}
+:ng-deep .swiper__content {
+  // width: 60%;
+  padding-right: 25px;
+  @media screen and (max-width: 992px) {
+    // width: 55%;
+  }
+  @media screen and (max-width: 768px) {
+    margin-top: -80px;
+    text-align: center;
+    padding: 0 30px;
+  }
+  
+  @media screen and (max-width: 576px) {
+    padding: 0;
+  }
+  > * {
+    opacity: 0;
+    transform: translateY(25px);
+    transition: all 0.4s;
+  }
+}
+
+::ng-deep .swiper__code {
+  color: #7b7992;
+  margin-bottom: 15px;
+  display: block;
+  font-weight: 500;
+}
+::ng-deep .swiper__title{
+  font-size: 24px;
+  font-weight: 700;
+  color: #0d0925;
+  margin-bottom: 20px;
+}
+::ng-deep .swiper__text {
+  color: #4e4a67;
+  margin-bottom: 30px;
+  line-height: 1.5em;
+}
+::ng-deep .swiper__button{
+  display: inline-flex;
+  background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
+  padding: 15px 35px;
+  border-radius: 50px;
+  color: #fff;
+  box-shadow: 0px 14px 80px rgba(252, 56, 56, 0.4);
+  text-decoration: none;
+  font-weight: 500;
+  justify-content: center;
+  text-align: center;
+  letter-spacing: 1px;
+  @media screen and (max-width: 576px) {
+    width: 100%;
+  }
+}
+::ng-deep .swiper__pagination {
+  position: absolute;
+  z-index: 21;
+  right: 20px;
+  width: 11px !important;
+  text-align: center;
+  left: auto !important;
+  top: 50%;
+  bottom: auto !important;
+  transform: translateY(-50%);
+  @media screen and (max-width: 768px) {
+    transform: translateX(-50%);
+    left: 50% !important;
+    top: 205px;
+    width: 100% !important;
     display: flex;
     justify-content: center;
-    margin: 0 auto;
-}
-ngx-emoji {
-    padding-top: 5px;
-}
-.card {
-    background-color: rgba(204, 204, 204, 0.234);
-    backdrop-filter: blur(10px);
-    width: 70%;
-}
-.ctn-cards {
-    width: 90%;
-    margin: 0 auto;
-}
-
-
-#carousel {
-  position: relative;
-  height: 565px;
-  top: 37%;
-  overflow: hidden;
-
-  div {
-    position: absolute;
-    transition: transform 1s, left 1s, opacity 1s, z-index 0s;
-    opacity: 1;
-
-    img{
-      width: 400px;
-      transition: width 1s;}
-
-    &.hideLeft {
-      left: 0%;
-      opacity: 0;
-      transform: translateY(50%) translateX(-50%);
-
-      img{
-        width: 200px;}
-      }
-    &.hideRight{
-      left: 100%;
-      opacity: 0;
-      transform: translateY(50%) translateX(-50%);
-      img{
-        width: 200px;}
-      }
-    &.prev{
-      z-index: 5;
-      left: 35%;
-      transform: translateY(50px) translateX(-50%);
-
-      img{
-        width: 300px;}
-      }
-    &.prevLeftSecond{
-      z-index: 4;
-      left: 25%;
-      transform: translateY(50%) translateX(-50%);
-      opacity: .7;
-      img{
-        width: 200px;}
-      }
-    &.selected{
-      z-index: 10;
-      left: 50%;
-      transform: translateY(0px) translateX(-50%);
-    }
-    &.next{
-      z-index: 5;
-      left: 67%;
-      transform: translateY(50px) translateX(-50%);
-
-      img{
-        width: 300px;
-      }
-    }
-    &.nextRightSecond{
-      z-index: 4;
-      left: 79%;
-      transform: translateY(50%) translateX(-50%);
-      opacity: .7;
-      img{
-        width: 200px;
-      }
-    }
+    align-items: center;
   }
 }
-figure {
-  position: relative;
-  padding: 5px;
-  overflow: hidden;
+
+::ng-deep .swiper-pagination-bullets .swiper-pagination-bullet {
+  margin: 8px 0;
+  @media screen and (max-width: 768px) {
+    margin: 0 5px;
+  }
 }
-figure:hover figcaption {
+
+::ng-deep .swiper-pagination-bullet {
+  width: 11px;
+  height: 11px;
   display: block;
-}
-figcaption {
-  display: none;
-  position: absolute;
-  top: 5px;
-  left: 5px;
-  bottom: 5px;
-  right: 5px;
-  text-align: center;
-  background-color: rgba(0, 0, 0, 0.7);
-  color: white;
-  padding: 50px;
-  p {
-    margin-bottom: 35px;
+  border-radius: 10px;
+  background: #062744;
+  opacity: 0.2;
+  transition: all 0.3s;
+  .swiper-pagination-bullet-active {
+    opacity: 1;
+    background: #fd3838;
+    height: 30px;
+    box-shadow: 0px 0px 20px rgba(252, 56, 56, 0.3);
+
+    @media screen and (max-width: 768px) {
+      height: 11px;
+      width: 30px;
+    }
   }
 }
-.buttons{
-  position: absolute;
-  display: flex;
-  left: 50%;
-  top: 67%;
-  transform: translateX(-50%);
-  button {
-    margin-right: 10px;
+
+::ng-deep .item-project {
+  background-color: white !important;
+
+  @media screen and (max-width: 768px) {
+    flex-direction: column;
   }
 }
-.a_git,
-.a_view {
-  padding: 10px;
-  text-decoration: none;
-  color: white;
-  border-radius: 30px;
-  margin-top: 20px;
-}
-.a_git {
-  background-color: rgb(79, 79, 79);
-  margin-right: 10px;
-  &:hover {
-    padding: 13px;
-    background-color: rgb(106, 106, 106);
+::ng-deep .swiper-slide-active {
+  .swiper__img {
+    img {
+      opacity: 1;
+      transition-delay: 0.3s;
+    }
+  }
+  .swiper__content {
+    > * {
+      opacity: 1;
+      transform: none;
+
+      @for $i from 0 to 15 {
+        &:nth-child(#{$i + 1}) {
+          transition-delay: $i * 0.1 + 0.3s;
+        }
+      }
+    }
   }
 }
-.a_view {
-  background-color: rgb(33, 131, 196);
-  &:hover {
-    padding: 13px;
-    background-color: rgb(40, 146, 216);
-  }
-}
-@media (min-width: 1900px){
+
+// .ctn-carousel {
+//     width: 70%;
+// }
+
+// li {
+//     text-align: justify;
+// }
+// a {
+//     text-decoration: none;
+// }
+// button {
+//     border-radius: 20px;
+//     display: flex;
+//     justify-content: center;
+//     margin: 0 auto;
+// }
+// ngx-emoji {
+//     padding-top: 5px;
+// }
+// .card {
+//     background-color: rgba(204, 204, 204, 0.234);
+//     backdrop-filter: blur(10px);
+//     width: 70%;
+// }
+// .ctn-cards {
+//     width: 90%;
+//     margin: 0 auto;
+// }
+
+// #carousel {
+//   position: relative;
+//   height: 565px;
+//   top: 37%;
+//   overflow: hidden;
+
+//   div {
+//     position: absolute;
+//     transition: transform 1s, left 1s, opacity 1s, z-index 0s;
+//     opacity: 1;
+
+//     img{
+//       width: 400px;
+//       height: 100%;
+//       transition: width 1s;
+//     }
+//     .img-selected {
+//       width: 450px;
+//       height: 300px;
+//     }
+//     &.hideLeft {
+//       left: 0%;
+//       opacity: 0;
+//       transform: translateY(50%) translateX(-50%);
+
+//       img{
+//         width: 200px;}
+//       }
+//     &.hideRight{
+//       left: 100%;
+//       opacity: 0;
+//       transform: translateY(50%) translateX(-50%);
+//       img{
+//         width: 200px;}
+//       }
+//     &.prev{
+//       z-index: 5;
+//       left: 35%;
+//       transform: translateY(50px) translateX(-50%);
+
+//       img{
+//         width: 300px;}
+//       }
+//     &.prevLeftSecond{
+//       z-index: 4;
+//       left: 25%;
+//       transform: translateY(50%) translateX(-50%);
+//       opacity: .7;
+//       img{
+//         width: 200px;}
+//       }
+//     &.selected{
+//       z-index: 10;
+//       left: 50%;
+//       height: 350px;
+//       transform: translateY(0px) translateX(-50%);
+//     }
+//     &.next{
+//       z-index: 5;
+//       left: 67%;
+//       transform: translateY(50px) translateX(-50%);
+
+//       img{
+//         width: 300px;
+//       }
+//     }
+//     &.nextRightSecond{
+//       z-index: 4;
+//       left: 79%;
+//       transform: translateY(50%) translateX(-50%);
+//       opacity: .7;
+//       img{
+//         width: 200px;
+//       }
+//     }
+//   }
+// }
+// figure {
+//   position: relative;
+//   padding: 5px;
+//   overflow: hidden;
+// }
+// figure:hover figcaption {
+//   display: block;
+// }
+// figcaption {
+//   display: none;
+//   position: absolute;
+//   top: 5px;
+//   left: 5px;
+//   bottom: 5px;
+//   right: 5px;
+//   text-align: center;
+//   background-color: rgba(0, 0, 0, 0.7);
+//   color: white;
+//   padding: 50px;
+//   p {
+//     margin-bottom: 35px;
+//   }
+// }
+// .buttons{
+//   position: absolute;
+//   display: flex;
+//   left: 50%;
+//   top: 67%;
+//   transform: translateX(-50%);
+//   button {
+//     margin-right: 10px;
+//   }
+// }
+// .a_git,
+// .a_view {
+//   padding: 10px;
+//   text-decoration: none;
+//   color: white;
+//   border-radius: 30px;
+//   margin-top: 20px;
+// }
+// .a_git {
+//   background-color: rgb(79, 79, 79);
+//   margin-right: 10px;
+//   &:hover {
+//     padding: 13px;
+//     background-color: rgb(106, 106, 106);
+//   }
+// }
+// .a_view {
+//   background-color: rgb(33, 131, 196);
+//   &:hover {
+//     padding: 13px;
+//     background-color: rgb(40, 146, 216);
+//   }
+// }
+@media (min-width: 1900px) {
   .buttons {
     top: 82.7%;
   }
 }
-@media (max-width: 1400px){
+@media (max-width: 1400px) {
   .buttons {
     top: 81.5%;
   }
@@ -188,7 +404,7 @@ figcaption {
 }
 @media (min-width: 770px) and (max-width: 993px) {
   .buttons {
-    top: 79.1%;;
+    top: 79.1%;
   }
 }
 @media (max-width: 620px) {
@@ -197,10 +413,10 @@ figcaption {
   }
 }
 @media (max-width: 500px) {
-  .ctn-inicio-projects{
+  .ctn-inicio-projects {
     height: 610px;
   }
-  #carousel{
+  #carousel {
     top: 0;
   }
   .buttons {
